--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     }
   },
   "dependencies": {
+    "@types/nprogress": "^0.2.3",
     "axios": "^1.6.2",
     "commitlint": "^18.4.3",
     "conventional-changelog-cli": "^4.1.0",
     "core-js": "^3.33.3",
+    "element-plus": "^2.4.3",
     "husky": "^8.0.3",
     "less": "^4.2.0",
     "mathjs": "^12.1.0",
@@ -44,6 +46,8 @@
     "conventional-changelog-custom-config": "^0.3.1",
     "cz-conventional-changelog": "^3.3.0",
     "typescript": "^5.2.2",
+    "unplugin-auto-import": "^0.17.2",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.0",
     "vue-tsc": "^1.8.22"
   }
